# docs/swagger.yaml
@@ -69,6 +69,10 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       token:
         type: string
       username:
@@ -145,6 +149,19 @@ definitions:
       version:
         type: integer
     type: object
+  store.Role:
+    properties:
+      description:
+        description: Ensure this is a string
+        type: string
+      id:
+        description: Ensure this is int64
+        type: integer
+      level:
+        type: integer
+      name:
+        type: string
+    type: object
   store.User:
     properties:
       created_at:
@@ -155,6 +172,10 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       username:
         type: string
     type: object
@@ -280,7 +301,7 @@ paths:
       summary: Create a new post
       tags:
       - posts
-  /posts/{ID}:
+  /posts/{postID}:
     delete:
       consumes:
       - application/json
@@ -343,7 +364,7 @@ paths:
       summary: Get a post by ID
       tags:
       - posts
-    put:
+    patch:
       consumes:
       - application/json
       description: Updates the title, content, or tags of a post
